      nscd_nischeck(8), and nscd.conf(5) man pages.  Patched by 
      Sebastian Rittau <srittau@jroger.in-berlin.de> (Closes: #94058)
    - debian/manpages/nscd.conf.5: likewise.
    - debian/manpages/nscd_nischeck.8: likewise.

    - debian/locales/DEBIAN/templates: Add a description "what is the
      locale?". (Closes: #119197)
    - debian/locales/DEBIAN/templates: Introducing new templates format
      with po-debconf.  Thanks to Denis Barbier <barbier@linuxfr.org>.
    - debian/packages.d/locales.mk: likewise.
    - debian/po/*: likewise.
    - debian/control.in/main: Build-Depends-Indep: po-debconf.

    - debian/sysdeps/depflags.pl: Remove conflicts: file-rc (<< 0.7.0)
    - debian/libc/DEBIAN/postinst: Use /usr/sbin/update-rc.d in updatercd(),
      suggested by Anthony Towns <aj@azure.humbug.org.au>.
    - debian/libc/DEBIAN/postinst: Check /usr/{lib,share}/file-rc/
      because file-rc >= 0.7.0 does not use /usr/lib/file-rc.

    - debian/patches/glibc23-hppa-compat.dpatch: add hppa libgcc-compat
      symbols patch, patched by Randolph Chung <tausq@debian.org>.
    - debian/patches/libgcc-compat-all.dpatch: update for mips and add
      for alpha, patched by Guido Guenther <agx@debian.org>.
    - debian/patches/libgcc-compat-other.dpatch: add for arm, m68k, ia64
      and s390.  Patched by GOTO Masanori <gotom@debian.org>.

    - debian/locales/usr/sbin/locale-gen: add "set -e" in order to return
      value.  (Closes: #183449)

 -- GOTO Masanori <gotom@debian.or.jp>  Wed, 26 Feb 2003 18:44:08 +0900

glibc (2.3.1-14) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc23-cmov.dpatch: Fix hwcap condition code again,
      previous version did not work properly under some situation.
    - debian/sysdeps/depflags.pl: Fix libnss-db dependency from << 2.2-6 
      to <= 2.2-6.1.1, because the first version of libnss-db to work
      with libc6 2.3 is 2.2-6.1, and 2.2-6.2 works under all architectures