@@ -59,3 +59,17 @@ contain many changes, and generally affect all architectures differently.
 We sync frequently with CVS so that we can take this large amount of
 changes in smaller chunks, simplifying the process, and allowing us to
 communicate problems to upstream much easier.
+
+Q5: How to setup my own language/regional (locale) setting?
+
+A5: Glibc provides "locale" defined in POSIX.  Locale is a framework
+to switch between multiple languages for users who can select to use
+their language, country, characters, collation order, etc.  For
+example, some program display messages in your own language, if you
+set the appropriate locale.  Default locale is C (or POSIX) which
+behaves traditional Unix with ASCII message.  For more information,
+look locale (5).
+
+If you want to use your own locale, install "locales" package.  With
+debconf interface, you can setup which locale is generated, and which
+locale is used in default on your machine.
