@@ -123,9 +123,8 @@ push @{$libc_dev_c{'Replaces'}}, 'netkit-rpc';
 push @{$libc_c{'Replaces'}}, 'netbase (<< 4.0)';
 push @{$libc_dev_c{'Replaces'}}, 'netbase (<< 4.0)';
 
-# Conflict old wine/php4
+# Conflict old wine
 push @{$libc_c{'Conflicts'}}, 'wine (<< 0.0.20021007-1)';
-push @{$libc_c{'Conflicts'}}, 'php4 (<< 4:4.2.3-5)';
 
 # Make sure we only have one version of libc-dev installed
 push @{$libc_dev_c{'Provides'}}, 'libc-dev';
