@@ -13,6 +13,9 @@ glibc (2.3.1-15) unstable; urgency=low
 
     - debian/locales/DEBIAN/templates: Add a description "what is the
       locale?". (Closes: #119197)
+    - debian/FAQ: Add description how to setup your own locale with 
+      debconf + locales.  (Closes: #99763)
+
     - debian/locales/DEBIAN/templates: Introducing new templates format
       with po-debconf.  Thanks to Denis Barbier <barbier@linuxfr.org>.
     - debian/packages.d/locales.mk: likewise.
@@ -34,6 +37,12 @@ glibc (2.3.1-15) unstable; urgency=low
 
     - debian/locales/usr/sbin/locale-gen: add "set -e" in order to return
       value.  (Closes: #183449)
+
+    - debian/packages.d/libc-udeb.mk: contain libpthread.so to support
+      installer using pthread.  (Closes: #183155)
+
+    - debian/sysdeps/depflags.pl: remove php4 conflicts from libc6.
+      (Closes: #183477)
 
  -- GOTO Masanori <gotom@debian.or.jp>  Wed, 26 Feb 2003 18:44:08 +0900
 
